Send pointercancel based on scroll capability of pointers

Store whether a pointer is capable of scrolling in
PointerEventManager (based on whether it is coming
from touch path or not). Then when scroll happens
send pointercancel for all scroll capable pointers
instead of only touch pointers.

Bug: 766486
Change-Id: I7ae6808fe3c976fcb2dd3d123f22e870011476ab
Reviewed-on: https://chromium-review.googlesource.com/695841
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Mustaq Ahmed <mustaq@chromium.org>
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506292}
Former-commit-id: ca109349f4522f52aaf6b87e726ccf767a2f39d0